# github-rs

./: .gitmodules  Cargo.toml
src/: lib.rs  queries.rs  repository.rs  requests.rs
src/queries/: file_commit_history.rs  find_orgs.rs  find_repository.rs  find_user.rs  search_for_repos.rs
src/queries/graphql/: query_file_commit_history.graphql  query_find_repository.graphql  query_find_user.graphql  query_search_for_repos.graphql
src/query/: stream.rs
src/requests/: find_repository.rs  find_user.rs  query_file_history.rs  search_repositories.rs
src/requests/repos/: create.rs  set_topics.rs
src/requests/repos/contents/: update.rs
